--- a/example/build.gradle
+++ b/example/build.gradle
@@ -10,7 +10,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "io.realm.regal.example"
+        applicationId "io.realm.royal.example"
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
