--- a/example/build.gradle
+++ b/example/build.gradle
@@ -27,5 +27,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.+'
+    compile 'io.realm:realm-android:0.81.1'
     compile project(':library')
 }
